<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sousheelvunnam.ribbit.com.sousheelvunnam.ribbit.ui.LoginActivity"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">
        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button_label"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>
</RelativeLayout>
